--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,15 @@
     tools:context=".MainActivity">
 
 
-
-    <TextView
-        android:id="@+id/hasil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:text="Hasil :"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_segitiga" />
-
     <TextView
         android:id="@+id/luas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="50dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textLuas"
+        tools:layout_editor_absoluteY="599dp" />
 
     <TextView
         android:id="@+id/keliling"
@@ -38,28 +23,30 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:textSize="16sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/luas"
         app:layout_constraintTop_toBottomOf="@+id/luas" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/panjang"
+        android:inputType="number"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:hint="Masukkan Panjang / Alas / Diameter"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/lebar"
+        android:inputType="number"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:hint="Masukkan Lebar / Tinggi"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,20 +58,21 @@
         android:layout_height="50dp"
         android:layout_marginBottom="250dp"
         android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/persegi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_segitiga"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/persegi" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/button_segitiga"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="248dp"
         android:background="?android:attr/selectableItemBackground"
         android:src="@drawable/segtiga"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
@@ -93,20 +81,20 @@
         android:layout_height="50dp"
         android:layout_marginBottom="250dp"
         android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/lingkaran"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_segitiga"
-        android:src="@drawable/lingkaran" />
+        app:layout_constraintStart_toEndOf="@+id/button_segitiga" />
 
     <TextView
         android:id="@+id/textLuas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="120dp"
         android:layout_marginBottom="100dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Luas : "
-        android:textSize="16sp"
+        android:text="Luas \t\t\t\t :"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -116,11 +104,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Keliling : "
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/textLuas"
+        android:text="Keliling \t :"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/textLuas"
         app:layout_constraintTop_toBottomOf="@+id/textLuas" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
